--- a/devel/include/config.inc.php.sample
+++ b/devel/include/config.inc.php.sample
@@ -2,12 +2,12 @@
 // Coppermine configuration file
 
 // MySQL configuration
-$CONFIG['dbserver'] = 			"localhost";	// Your databaseserver
-$CONFIG['dbuser'] = 			"root";	// Your mysql username
-$CONFIG['dbpass'] = 			"";		// Your mysql password
-$CONFIG['dbname'] = 			"coppermine11";	// Your mysql database name
+$CONFIG['dbserver'] =                         'localhost';        // Your databaseserver
+$CONFIG['dbuser'] =                         'root';        // Your mysql username
+$CONFIG['dbpass'] =                         '';                // Your mysql password
+$CONFIG['dbname'] =                         'coppermine';        // Your mysql database name
 
 
 // MySQL TABLE NAMES PREFIX
-$CONFIG['TABLE_PREFIX'] =		"cpg11d_";
+$CONFIG['TABLE_PREFIX'] =                'cpg132_';
 ?>
